--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cloud_firestore: ^4.17.4
   firebase: ^9.0.3
   auth: ^8.2.0+02
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
